# ACBackup

./: CMakeLists.txt  README.md
_legacy/: BackupContainerIndex.cpp  BackupContainerIndex.hpp  Config.cpp  Config.hpp  FlatContainerFileSystem.cpp  FlatContainerFileSystem.hpp  KeyDerivation.cpp  ProcessStatus.cpp  ProcessStatus.hpp  StatusTracker.hpp  StatusTrackerWebService.cpp  StatusTrackerWebService.hpp  main.cpp  resources.hpp
_legacy/_encryption/: FlatContainerIndex.hpp
_legacy/_legacy/: BackupNodeAttributes.cpp  BackupNodeAttributes.hpp  FlatContainerIndex.cpp  FlatContainerIndex.hpp
_legacy/backup/: BackupManager.cpp  BackupManager.hpp  Snapshot.cpp  Snapshot.hpp
_legacy/indexing/: FileSystemNodeAttributes.cpp  FileSystemNodeAttributes.hpp  FileSystemNodeIndex.cpp  (+4 more)
_legacy2/: Config.cpp  Config.hpp  main.cpp
_legacy_encryption/: BackupManager.cpp  FlatContainerIndex.cpp  KeyDerivation.hpp  KeyVerificationFailedException.hpp  main.cpp
resources/: ACJSWCL.js.hpp  clean_light.css.hpp  index.htm
src/: BackupContainerIndex.cpp  BackupContainerIndex.hpp  BackupManager.cpp  BackupManager.hpp  CompressionSetting.hpp  CompressionStatistics.cpp  CompressionStatistics.hpp  Config.cpp  Config.hpp  FileIndex.hpp  FileSystemIndex.cpp  FileSystemIndex.hpp  FlatContainerFileSystem.cpp  FlatContainerFileSystem.hpp  FlatContainerIndex.cpp  FlatContainerIndex.hpp  IndexingReadException.hpp  InjectionContainer.hpp  KeyDerivation.cpp  KeyDerivation.hpp  KeyVerificationFailedException.hpp  NodeIndexDifferenceResolver.cpp  NodeIndexDifferenceResolver.hpp  ProcessStatus.cpp  ProcessStatus.hpp  Serialization.hpp  StatusTracker.cpp  StatusTracker.hpp  StatusTrackerWebService.cpp  StatusTrackerWebService.hpp  StreamPipingFailedException.hpp  Util.cpp  Util.hpp  main.cpp
src_viewer/: DataFileTreeNode.cpp  DataFileTreeNode.hpp  FileRevisionNode.hpp  Nodes.cpp  Nodes.hpp  main.cpp
(+74 files in other folders)
